<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.userside</groupId>
    <artifactId>usersideapp</artifactId>
    <version>1.0-SNAPSHOT</version>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>
    </properties>
    <dependencies>

        <dependency>
			<groupId>net.sf.bluecove</groupId>
			<artifactId>bluecove</artifactId>
			<version>2.1.1-SNAPSHOT</version>
			<scope>system</scope>
			<systemPath>${basedir}/src/main/resources/bluecove-2.1.1-SNAPSHOT.jar</systemPath>
		</dependency>
		<dependency>
			<groupId>net.sf.bluecove</groupId>
			<artifactId>bluecove-bluez</artifactId>
			<version>2.1.1-SNAPSHOT</version>
			<scope>system</scope>
			<systemPath>${basedir}/src/main/resources/bluecove-bluez-2.1.1-SNAPSHOT.jar</systemPath>
		</dependency>
		<dependency>
			<groupId>net.sf.bluecove</groupId>
			<artifactId>bluecove-emu</artifactId>
			<version>2.1.1-SNAPSHOT</version>
			<scope>system</scope>
			<systemPath>${basedir}/src/main/resources/bluecove-emu-2.1.1-SNAPSHOT.jar</systemPath>
		</dependency>
		<dependency>
			<groupId>net.sf.bluecove</groupId>
			<artifactId>bluecove-gpl</artifactId>
			<version>2.1.1-SNAPSHOT</version>
			<scope>system</scope>
			<systemPath>${basedir}/src/main/resources/bluecove-gpl-2.1.1-SNAPSHOT.jar</systemPath>
		</dependency>


        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-controls</artifactId>
            <version>13</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-fxml</artifactId>
            <version>13</version>
        </dependency>
    </dependencies>
    <build>
    	<resources>
			<resource>
				<directory>src/main/resources</directory>
				<excludes>
					<exclude>*.jar</exclude>
				</excludes>
				<filtering>false</filtering>
			</resource>
		</resources>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.0</version>
                <configuration>
                    <release>11</release>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-maven-plugin</artifactId>
                <version>0.0.6</version>
                <executions>
                    <execution>
                        <!-- Default configuration for running -->
                        <!-- Usage: mvn clean javafx:run -->
                        <id>default-cli</id>
                        <configuration>
                            <mainClass>com.userside.App</mainClass>
                            <jvmArgs>
                            <jvmArg>-Dprism.order=sw</jvmArg> 
                            <jvmArg>-Djavafx.embed.singleThread=true</jvmArg> 
                            <jvmArg>-Dprism.verbose=true</jvmArg> 
                            <jvmArg>--add-opens</jvmArg>
                            <jvmArg>java.base/java.lang=ALL-UNNAMED</jvmArg> 
                            <jvmArg>-Dglass.accessible.force=false</jvmArg> 
                        </jvmArgs>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>
